sort.basic.lessons.sort.basic.comb.AlgCombSort.scala.code
def combSort() {
  var swapped= false
  var gap=getValueCount()
  do {
    if (gap>1){
      gap=gap/1.3
    }
    while (i+gap<getValueCount(){
      if (!isSmaller(i,i+gap))
    })
  }}
